[package]
name = "mie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
tokio = { version = "1.12.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3.17"
bincode_aes = "1.0.1"
base64 = "0.13.0"
lazy_static = "1.4.0"
evdev = "0.11.1"
run_script = "0.9.0"